# arcana-bot

./: .claudeignore  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  USER_AGREEMENT_RU.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 156b17080a2e_add_platform_identity.py  2a3b4c5d6e7f_add_referral_and_limits.py  3c4d7a9b1e2f_add_llm_usage_events_table.py  4d5e6f7a8b9c_add_premium_and_payments.py  5e6f7a8b9c0d_add_last_reset_at_to_users.py  6f7a8b9c0d1e_add_tg_blocked_at_to_platform_identities.py  7a1b2c3d4e5f_add_spread_type_and_image_urls.py  9d2f3b7e1a1c_add_image_url_to_readings.py  a1b2c3d4e5f6_add_platform_identity.py  c8f17ac51a4d_initial_schema.py
app/: main.py
app/api/: payments.py  router.py
app/application/: exceptions.py
app/application/dto/: admin_stats.py  daily_card.py  profile.py  reading.py  registration.py
app/application/security/: prompt_guard.py
app/application/use_cases/: confirm_subscription_payment.py  (+6 more)
app/assets/: tarot_deck.json
app/bot/: __init__.py  main.py  states.py  utils.py  vk_main.py
app/core/: __init__.py  config.py  db.py
app/miniapp/: share-story.html  share-story.js
app/models/: __init__.py  base.py  llm_usage.py  reading.py  user.py
app/repositories/: llm_usage.py  reading.py  user.py
app/schemas/: __init__.py  tarot.py
app/services/: __init__.py  analytics_service.py  image_service.py  llm_service.py  storage_service.py  tarot_data.py  tarot_service.py
docs/: audit.md
nginx/: arcana-bot.conf
(+58 files in other folders)
