[project]
name = "arcana-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.91",
    "fastapi>=0.136.0",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[socks]>=22.7",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "dishka>=1.4.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
]
